# TFHEpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile-ubuntu1804  Dockerfile-ubuntu2004  Dockerfile-ubuntu2404  LICENSE  README.md  bionic-Dockerfile  compare-fft.def  compare-tfhers.def  docker-fft-bench.bash  fft-bench.bash  format.bash
.github/workflows/: benchmark.yml  compare-tfhers.yml  test.yml
bench-tfhers/: Cargo.toml
bench-tfhers-fft/: Cargo.toml  rust-toolchain.toml
bench-tfhers-fft/src/: main.rs
bench-tfhers/src/: main.rs
benchmark/: CMakeLists.txt  bench.cpp  bench_fft.cpp  bench_nand.cpp  bench_stdcell.cpp
docs/: API.md  Advanced.md  Build.md  CKKS.md  Gates.md  GettingStarted.md  Introduction.md  Keys.md  Parameters.md  README.md  Serialization.md  Types.md  bfv-simd.md
fft_processors/fftw/: CMakeLists.txt
include/: BLAKE3PRNG.hpp  BLAKE3PRNG.ixx  INTorus.hpp  INTorus.ixx  aes.hpp  aes.ixx  ascon.hpp  bfv++.hpp  bfv++.ixx  bfv-bign.hpp  bfv-bootstrapping.hpp  bfv-c2s.hpp  bfv-clpx.hpp  bfv-digitext.hpp  bfv-gbfv.hpp  bfv-multilimb.hpp  bfv-slots.hpp  circuitbootstrapping.hpp  circuitbootstrapping.ixx  ckks.hpp  cloudkey.hpp  cloudkey.ixx  cmuxmem.hpp  cmuxmem.ixx  cuhe++.hpp  cuhe++.ixx  detwfa.hpp  detwfa.ixx  evalkeygens.hpp  evalkeygens.ixx  fft_processor_spqlios_arithmetic.h  fnt.hpp  fnt.ixx  gate.hpp  gate.ixx  gatebootstrapping.hpp  gatebootstrapping.ixx  hexl++.hpp  hexl++.ixx  homdecomp.hpp  (+33 more)
include/axell/: gate.hpp  integer.hpp  mpparam.hpp
include/bfv/: bfv++.hpp  bfv-gbfv.hpp  bfv-multilimb.hpp  bfv-slots.hpp
include/ckks/: ckks.hpp
include/clpx/: bfv-clpx.hpp
include/clpx/params/: SS2CLPX.hpp
include/externs/: circuitbootstrapping.hpp  cloudkey.hpp  detwfa.hpp  gate.hpp  gatebootstrapping.hpp  key.hpp  keyswitch.hpp  tlwe.hpp  trgsw.hpp  trlwe.hpp
include/params/: 128bit.hpp  128bit.ixx  CGGI16.hpp  CGGI16.ixx  CGGI19.hpp  CGGI19.ixx  SS2CLPX.hpp  compress.hpp  compress.ixx  concrete.hpp  concrete.ixx  ternary.hpp  ternary.ixx  tfhe-rs.hpp  tfhe-rs.ixx
include/tfhe/: cmuxmem.hpp  homdecomp.hpp  key.hpp  keybundle.hpp  tlwe.hpp  trlwe.hpp
include/tfhe/externs/: circuitbootstrapping.hpp  gatebootstrapping.hpp  tlwe.hpp
proto/: cloudkey.proto  key.proto  lweParams.proto  types.proto
scripts/: compile_project.sh  remove_src_instantiations.sh  replace_includes.sh
scripts_backup/: backup.sh  remove_externs.sh  remove_import_semicolons.sh
src/: CMakeLists.txt  bfv.cpp  circuitbootstrapping.cpp  cloudekey.cpp  cloudkey.cpp  detwfa.cpp  fft_processor_spqlios_arithmetic.cpp  gate.cpp  gatebootstrapping.cpp  key.cpp  keyswitch.cpp  mulfft.cpp  tlwe.cpp  trgsw.cpp  trlwe.cpp  utils.cpp
src/axell/: gate.cpp  integer.cpp
test/: CMakeLists.txt  INTorus.cpp  aesencWOexpansion.cpp  aesinvsbox.cpp  aesinvsboxrom.cpp  aessboxrom.cpp  annihilate.cpp  annihilatecircuitbootstrapping.cpp  ascon.cpp  ascon_aes_decrypt_benchmark.cpp  automorphism.cpp  benchmark_docker.sh  bfv_gbfv_scaffold.cpp  bfv_multilimb.cpp  bfv_prime_power_slots.cpp  bignum_scheme_switch.cpp  bitsequencerepresentation.cpp  bitsequencerepresentation.cpp.deprecated  blindrotatefnt.cpp  c2s_factorization.cpp  cereal.cpp  chengspacking.cpp  chenspacking.cpp  circuitbootstrapping.cpp  circuitbootstrappinglvl22.cpp  circuitbootstrappingsub.cpp  ckks_benchmark.cpp  ckks_bootstrap_primitives.cpp  ckks_bootstrap_validation.cpp  ckks_bootstrap_workflow.cpp  ckks_coeff_encode.cpp  ckks_coeff_encrypt.cpp  ckks_coeff_mul.cpp  ckks_level_chain.cpp  ckks_linear_transform.cpp  ckks_multilimb_torus.cpp  ckks_slot_encode.cpp  clpx_mult.cpp  clpx_scheme_switch.cpp  cmux.cpp  (+61 more)
test/axell/: 1brFullAdder.cpp  2bit1brAdder.cpp  2bit2brAdder.cpp  2brFullAdder.cpp  3inputfulladder.cpp  4input.cpp  CMakeLists.txt  Tree1brAdder.cpp  ao3.cpp  aoi3.cpp  fulladder.cpp  halfadder.cpp  oai3.cpp  swap.cpp  tfhe_integer.cpp  xornandnor.cpp
test/bfv/: bfv_gbfv_scaffold.cpp  modular_gaussian_128.cpp  modulusswitch.cpp  polyeval.cpp
test/ckks/: ckks_bootstrap_primitives.cpp  ckks_bootstrap_validation.cpp  ckks_multilimb_torus.cpp  ckks_noise_budget.cpp  ckks_tensor_rescale.cpp
test/common/: cereal.cpp  polymul.cpp
test/tfhe/: annihilatecircuitbootstrapping.cpp  ascon.cpp  ascon_aes_decrypt_benchmark.cpp  automorphism.cpp  blindrotatefnt.cpp  chenspacking.cpp  circuitbootstrappingsub.cpp  cmux.cpp  externalproduct.cpp  externalproductfnt.cpp  gatebootstrappingtlwe2tlweraintt.cpp  homdecomp.cpp  invmixcolumns.cpp  largelut_random_key_diagnostic.cpp  rom.cpp  tlwe2tablepacking.cpp  tlwe2trlweski.cpp  tlweenc.cpp  trgswenc.cpp  trlwemultdd.cpp
thirdparties/fftw/: CMakeLists.txt  fft_processor_fftw.cpp  fft_processor_fftw.h
thirdparties/hexl/: CMakeLists.txt
thirdparties/mkl/: CMakeLists.txt  fft_processor_mkl.cpp  fft_processor_mkl.hpp
thirdparties/randen/: CMakeLists.txt  randen.h  vector128.h
thirdparties/spqlios/: CMakeLists.txt  LICENSE  fft_processor_spqlios.cpp  fft_processor_spqlios.h  spqlios-bench.cpp  spqlios-fft-avx.s  spqlios-fft-avx512.s  spqlios-fft-fma.s  spqlios-fft-impl-avx512.cpp  spqlios-fft-impl.cpp  spqlios-fft.h  spqlios-ifft-avx.s  spqlios-ifft-avx512.s  spqlios-ifft-fma.s  stockham_fft_avx2.cpp  x86.h
thirdparties/spqlios-intl/: fft_processor_spqlios_intl.cpp  fft_processor_spqlios_intl.h
thirdparties/spqlios-stockham/: fft_processor_spqlios.cpp  fft_processor_spqlios.h
thirdparties/spqliox_aarch64/: CMakeLists.txt  fft_processor_spqliox_aarch64.cpp  fft_processor_spqliox_aarch64.h  spqliox_aarch64_impl.h
tutorial/: CMakeLists.txt  README.md  client.cpp  cloud.cpp  verify.cpp
